--- a/yote_root/html/yote/template_tests.html
+++ b/yote_root/html/yote/template_tests.html
@@ -7,6 +7,7 @@
  .fail { color:red }
  .pass { color:green }
  body { background-color:wheat }
+// .hide { display:none }
 </style>
 
 <script src="/yote/js/jquery-2.1.0.js"></script>
