--- a/yote_root/html/app_template.html
+++ b/yote_root/html/app_template.html
@@ -32,7 +32,7 @@
 	<!-- This connects the client with the yote system -->
 	var app = $.yote.init( MYAPP );
 
-	$.yote.util.register_template_variable( 'app', app );
+	$.yote.util.register_item( 'app', app );
         $.yote.util.init_ui();
     });
     </script>
