--- a/MadYote/html/app_template.html
+++ b/MadYote/html/app_template.html
@@ -22,7 +22,7 @@
 
 	$.yote.init();
 	var app = $.yote.fetch_app( MYAPP );
-	$.yote.util.register_template_variable( 'app', app );
+	$.yote.util.register_item( 'app', app );
         $.yote.util.init_ui();
     });
     </script>
