--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -101,7 +101,7 @@ if we are our experiences then we are both sides of them.
 		  args[ 'default_parent' ].set( dh, null );
 		  args[ 'default_parent' ].delete_key( { name : '_attached_objects', key : dh } );
 		  $.yote.debug = false;
-		  refresh_all();
+		  $.yote.util.refresh_ui();
 	      },
 	      setup_attached : function( args ) {
 		  $.yote.util.button_actions( 
@@ -119,7 +119,7 @@ if we are our experiences then we are both sides of them.
 				  args[ 'default_var' ].hash( {  name  : '_attached_objects',
 								 key   : k,
 								 value : o } );
-				  refresh_all();
+				  $.yote.util.refresh_ui();
 			      }
 			  } //action
 		      } );
@@ -137,7 +137,7 @@ if we are our experiences then we are both sides of them.
 								  msg( args, retmsg ) },
 							      function(err){ 
 								  msg( args, err ) } );
-		      refresh_all();
+		      $.yote.util.refresh_ui();
 		  }
 	      },
 	      cron_entry_next_time : function( args ) {
@@ -160,7 +160,6 @@ if we are our experiences then we are both sides of them.
 	      new_schedule:function( args ) {
 		  var id = '#' + args[ 'controls' ][ 'new_schedule_time' ];
 	      },
-	      refresh_all: refresh_all
 	  } );
 
 	  $.yote.util.register_function( 'refresh_all', function() {
@@ -355,7 +354,7 @@ if we are our experiences then we are both sides of them.
        function( ctx ) {
 	   $( ctx.controls.reset_b ).click( function() {
 	       root.purge_app( args.default_var );
-	       refresh_all();
+	       $.yote.util.refresh_ui();
 	   } );
        }
     ?>
