Updates to templating system. Changing the templates slightly

--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -4,7 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yote Admin Page (YAP)</title>
 
-    <script src="/yote/js"></script>
+    <script src="/yote/js/jquery-2.1.0.js"></script>
+    <script src="/yote/js/jquery.base64.min.js"></script>
+    <script src="/yote/js/jquery.cookie.js"></script>
+    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js/yote.js"></script>
+    <script src="/yote/js/yote.util.js"></script>
 
     <script src="/templates/default_templates.js"></script>
 
