--- a/yote_root/html/yote/template_tests.html
+++ b/yote_root/html/yote/template_tests.html
@@ -17,8 +17,6 @@
 <script src="/yote/js/yote.js"></script>
 <script src="/yote/js/yote.templates.js"></script>
 
-<script src="/templates/default_templates.js"></script>
-
 <script>
     <!--
 var tests = 0;
@@ -90,21 +88,24 @@ $().ready(function(){
 		    - test ability to set values in the context
 		    - test ability to return other filled in templates
 
-	        <$$$ function foo( ctx ) ...
-	        <$$$ var varname value $$$>
-	        <$$$ value varname function( ctx ) ...
+	        <$$$ set varname value $$$>
+                    - both simple and compound and list variables
+	        <$$$ set varname "text value" $$$>
+	        <$$$ set varname 'text value' $$$>
+	        <$$$ set varname function( ctx ) ...
+	        <$$$ control controlname html
 	        <?? function( ctx ) ....
 	        <$$ template 
 	        <@ template list max_rows @>
 	        <% template list max_rows %>
 	        <$ show var $>
-	        <$ show var $>
+	        <$ index $>
+	        <$ hashkey $>
 	        <? function( ctx ) ... ( after render )
 
 
       */
-    $.yote.include_templates( '/templates/default_templates.html' );
-    $.yote.templates.register_functions( base_templates );
+    $.yote.templates.import_templates( '/templates/default_templates.html' );
 
     function do_tests() {
         // init yote
@@ -116,11 +117,22 @@ $().ready(function(){
  	try {
 	    app.reset();
 	    var sandbox = app.get_sandbox();
-	    $.yote.templates.refresh_ui();
+	    $.yote.templates.init();
+	    $.yote.templates.refresh();
 	    
-	    is( $( '#comments' ).html().trim(), 'This template has comments', '<# comment template #>' );
-	    is( $( '#comments' ).html().trim(), 'This template has comments', 'automatic filling of template variables' );
 	    is( $.yote.templates.fill_template( 'Comments' ).trim(), 'This template has comments', '$.yote.templates.fill_template works' );
+	    is( $( '#comments' ).html().trim(), 'This template has comments', 'automatic filling of template variables' );
+	    is( $( '#comments' ).html().trim(), 'This template has comments', '<# comment template #>' );
+	    is( $.yote.templates.fill_template( 'TripleQuest' ).trim().replace( /[\n\s]+/g, ' '), 'A very simple test This template has comments Number 4 WAZ ZBorgs around', '< ??? function ??\?> effect on building templates, effect on using $$$ to create variables and effect of setting values directly in the context' );
+
+	    is( $.yote.templates.fill_template( 'SimpleTemplate' ).trim().replace( /[\n\s]+/g, ' '), 'A very simple test This template has comments', '<$$ templatename $$>' );
+
+	    is( $.yote.templates.fill_template( 'VarTest' ).trim().replace( /[\n\s]+/g, ' '), 'Give me arguments alpha beta zappa wack Tootwack', '<$$ templatename args $$>, <$$$ set varname "value" $$$> and <$$$ set varname function $$$>' );
+
+	    is( $.yote.templates.fill_template( 'ArrayTest' ).trim().replace( /[\n\s]+/g, ' '), 'ARRAY 0 : A 1 : C 2 : B Apple : butter Daikon : radish Lemon : yellow YARRA', 'tests <$$$ set varname function(args) { that returns a list } $$$>, <@ template list maxrows @>, <$ index $> and <$ get _ $> ' );
+
+//	    is( $.yote.templates.fill_template( '' ).trim().replace( /[\n\s]+/g, ' '), '', '' );
+	    
  	}
  	catch( err ) {
  	    fail( err )();
@@ -136,13 +148,50 @@ $().ready(function(){
 
 </head>
 
-<script type="text/template" class="yote_template_definition" template_name="SimpleTemplate">
-  A very simple test
-</script>
+<templates>
 
-<script type="text/template" class="yote_template_definition" template_name="Comments">
-    This template<# doesn't #> has comments <# I'd say #>
-</script>
+    <script type="text/template" class="yote_template_definition" template_name="ArrayRow">
+      <$ index $> : <$ get _ $> 
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="HashRow">
+      <$ hashkey $> : <$ get _ $> 
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="ArrayTest">
+       <$$$ set array function( ctx ) { return [ "A", "C", "B", "D", "E" ]; } $$$>
+       <$$$ set hash function( ctx ) { return {  Apple : 'butter', Spinach : 'wild', Daikon : 'radish', Lemon : 'yellow', Pea : 'green'}; } $$$>
+       ARRAY
+       <@ ArrayRow array 3 @>
+       <% HashRow hash 3 %>
+       YARRA
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="VarTestPartTwo">
+      <$$$ set e x $$$>
+      <?? function( ctx ) { return ctx.args.join(" ").toLowerCase() + ' ' + ctx.get( 'x' ) + ' ' + ctx.get( 'y' ) + ctx.get('e'); } ??>
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="VarTest">
+      <$$$ set x "wack" $$$>
+      <$$$ set y function( args ) { return "Toot"; } $$$>
+      Give me arguments <$$ VarTestPartTwo Alpha Beta Zappa $$>
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="TripleQuest">
+      <??? function( ctx ) { ctx.set( 'foo', 1 + 3 ); return '<$$$ set fool "Borgs around"$$$>' + "<$$$ set bar 'WAZ Z' $$$><$$ SimpleTemplate $$>" } ???>
+      <?? function( ctx ) { return "Number " + ctx.get( 'foo' ) + ' ' + ctx.get( 'bar' ) + ctx.get( 'fool' ); } ??>
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="SimpleTemplate">
+    A very simple test <$$ Comments $$>
+    </script>
+
+    <script type="text/template" class="yote_template_definition" template_name="Comments">
+       This template<# doesn't #> has comments <# I'd say #>
+    </script>
+
+</templates>
 
 <body>
   <h1>Yote Template Tests</h1>
